update reqs extraction scripts and outputs

--- a/reqs_extraction/gemini-meta-summarization-v1.ipynb
+++ b/reqs_extraction/gemini-meta-summarization-v1.ipynb
@@ -12,7 +12,8 @@
     "In progress: \n",
     "- Adding images back in, revising the prompting based on Inferno requirements extraction process documentation\n",
     "- Comparing LLM results\n",
-    "- Reviewing LangChain capabilities to improve document loading and summary quality."
+    "- Reviewing LangChain capabilities to improve document loading and summary quality\n",
+    "- Add additional messaging while documents are being processed (for markdown files)"
    ]
   },
   {
@@ -286,6 +287,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_requirements_extraction_prompt(content: Union[str, dict, list]) -> str:\n",
+    "    \"\"\"Create a prompt that aligns with Inferno's requirements extraction process\"\"\"\n",
+    "    \n",
+    "    return f\"\"\"Analyze this FHIR Implementation Guide content to extract precise requirements following these guidelines:\n",
+    "\n",
+    "For each requirement you identify, provide:\n",
+    "\n",
+    "1. REQUIREMENT TEXT\n",
+    "- Extract direct quotes from the source\n",
+    "- For compound requirements, split into atomic requirements\n",
+    "- Maintain context when splitting\n",
+    "- Use [...] for added clarifications\n",
+    "- Use ... for removed text\n",
+    "- Format using markdown syntax for code blocks, italics, etc.\n",
+    "\n",
+    "2. REQUIREMENT METADATA\n",
+    "- Conformance Level (SHALL, SHOULD, MAY, SHOULD NOT, SHALL NOT)\n",
+    "- Actor(s) the requirement applies to\n",
+    "- Whether the requirement is conditional (True/False)\n",
+    "- Any sub-requirements or referenced requirements\n",
+    "\n",
+    "3. SOURCE TRACEABILITY\n",
+    "- Note the specific section or location this requirement comes from\n",
+    "- For JSON content, note the specific resource type and element\n",
+    "\n",
+    "When analyzing content, focus on:\n",
+    "\n",
+    "a) Making requirements atomic and testable\n",
+    "b) Maintaining the original text while adding necessary context\n",
+    "c) Identifying implicit requirements for each actor\n",
+    "d) Distinguishing between conjunctive (\"and\") and disjunctive (\"or\") requirements\n",
+    "e) Capturing terminology bindings and must-support elements\n",
+    "f) Noting RESTful API conformance requirements\n",
+    "g) Identifying conditional requirements\n",
+    "\n",
+    "Content to analyze:\n",
+    "{json.dumps(content, indent=2) if isinstance(content, (dict, list)) else content}\n",
+    "\n",
+    "Format each requirement as:\n",
+    "```\n",
+    "Requirement Text: <quoted text with [...] for clarifications and ... for elisions>\n",
+    "Conformance: <conformance level>\n",
+    "Actor: <actor name(s)>\n",
+    "Conditional: <True/False>\n",
+    "Sub-Requirements: <list of referenced requirements if any>\n",
+    "Source: <specific location in documentation>\n",
+    "```\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_content_for_api(content: Union[str, dict, list], api_type: str) -> Union[str, List[dict], dict]:\n",
+    "    \"\"\"Format content appropriately for each API using Inferno's requirements structure\"\"\"\n",
+    "    \n",
+    "    # Create the base requirements extraction prompt\n",
+    "    base_prompt = create_requirements_extraction_prompt(content)\n",
+    "\n",
+    "    if api_type == \"gemini\":\n",
+    "        # Format specifically for Gemini's content structure\n",
+    "        return {\n",
+    "            \"contents\": [{\n",
+    "                \"parts\": [{\n",
+    "                    \"text\": base_prompt\n",
+    "                }]\n",
+    "            }]\n",
+    "        }\n",
+    "    \n",
+    "    # For other APIs, return just the text\n",
+    "    return base_prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -350,61 +432,6 @@
     "        results.append(result)\n",
     "        time.sleep(config[\"delay_between_chunks\"])\n",
     "    return results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_requirements_extraction_prompt(content: Union[str, dict, list]) -> str:\n",
-    "    \"\"\"Create a prompt that aligns with Inferno's requirements extraction process\"\"\"\n",
-    "    \n",
-    "    return f\"\"\"Analyze this FHIR Implementation Guide content to extract precise requirements following these guidelines:\n",
-    "\n",
-    "For each requirement you identify, provide:\n",
-    "\n",
-    "1. REQUIREMENT TEXT\n",
-    "- Extract direct quotes from the source\n",
-    "- For compound requirements, split into atomic requirements\n",
-    "- Maintain context when splitting\n",
-    "- Use [...] for added clarifications\n",
-    "- Use ... for removed text\n",
-    "- Format using markdown syntax for code blocks, italics, etc.\n",
-    "\n",
-    "2. REQUIREMENT METADATA\n",
-    "- Conformance Level (SHALL, SHOULD, MAY, SHOULD NOT, SHALL NOT)\n",
-    "- Actor(s) the requirement applies to\n",
-    "- Whether the requirement is conditional (True/False)\n",
-    "- Any sub-requirements or referenced requirements\n",
-    "\n",
-    "3. SOURCE TRACEABILITY\n",
-    "- Note the specific section or location this requirement comes from\n",
-    "- For JSON content, note the specific resource type and element\n",
-    "\n",
-    "When analyzing content, focus on:\n",
-    "\n",
-    "a) Making requirements atomic and testable\n",
-    "b) Maintaining the original text while adding necessary context\n",
-    "c) Identifying implicit requirements for each actor\n",
-    "d) Distinguishing between conjunctive (\"and\") and disjunctive (\"or\") requirements\n",
-    "e) Capturing terminology bindings and must-support elements\n",
-    "f) Noting RESTful API conformance requirements\n",
-    "g) Identifying conditional requirements\n",
-    "\n",
-    "Content to analyze:\n",
-    "{json.dumps(content, indent=2) if isinstance(content, (dict, list)) else content}\n",
-    "\n",
-    "Format each requirement as:\n",
-    "```\n",
-    "Requirement Text: <quoted text with [...] for clarifications and ... for elisions>\n",
-    "Conformance: <conformance level>\n",
-    "Actor: <actor name(s)>\n",
-    "Conditional: <True/False>\n",
-    "Sub-Requirements: <list of referenced requirements if any>\n",
-    "Source: <specific location in documentation>\n",
-    "```\"\"\""
    ]
   },
   {
@@ -555,7 +582,7 @@
     "        \n",
     "        # Save requirements to CSV\n",
     "        output_directory = 'processed_output'\n",
-    "        output_file = os.path.join(output_directory, f\"test_requirements_{api_type}.json\")\n",
+    "        output_file = os.path.join(output_directory, f\"test_requirements_{api_type}1.json\")\n",
     "        save_requirements_to_csv(all_requirements, output_file)\n",
     "        \n",
     "        return {\n",
@@ -566,32 +593,6 @@
     "    except Exception as e:\n",
     "        logging.error(f\"Error processing content: {str(e)}\")\n",
     "        raise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def format_content_for_api(content: Union[str, dict, list], api_type: str) -> Union[str, List[dict], dict]:\n",
-    "    \"\"\"Format content appropriately for each API using Inferno's requirements structure\"\"\"\n",
-    "    \n",
-    "    # Create the base requirements extraction prompt\n",
-    "    base_prompt = create_requirements_extraction_prompt(content)\n",
-    "\n",
-    "    if api_type == \"gemini\":\n",
-    "        # Format specifically for Gemini's content structure\n",
-    "        return {\n",
-    "            \"contents\": [{\n",
-    "                \"parts\": [{\n",
-    "                    \"text\": base_prompt\n",
-    "                }]\n",
-    "            }]\n",
-    "        }\n",
-    "    \n",
-    "    # For other APIs, return just the text\n",
-    "    return base_prompt"
    ]
   },
   {
@@ -1349,7 +1350,7 @@
     "    results[api_type] = process_all_content(api_type, base_directory)\n",
     "    \n",
     "    # Save results\n",
-    "    output_file = os.path.join(output_directory, f\"test_requirements_{api_type}.json\")\n",
+    "    output_file = os.path.join(output_directory, f\"test_requirements_{api_type}1.json\")\n",
     "    with open(output_file, 'w') as f:\n",
     "        json.dump(results[api_type], f, indent=2)\n",
     "    logging.info(f\"Saved {api_type} results to {output_file}\")"
