Adding more context to the HTML extractor header

--- a/HTML_extractor.ipynb
+++ b/HTML_extractor.ipynb
@@ -11,7 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook explores extracting narrative elements from HTML files using multiple methods incuding LangChain's `AsyncHtmlLoader` to convert URLs to to Markdown, LangChain's `UnstructuredHTMLLoader` and `BSHTMLLoader` methods to convert HTML from local folders, as well as a custom content extractor method `ContextExtractor` using BeautifulSoup to parse HTMLMTL content and extract specific elements."
+    "This notebook explores extracting narrative elements from HTML files using multiple methods incuding LangChain's `AsyncHtmlLoader` to convert URLs to to Markdown, LangChain's `UnstructuredHTMLLoader` and `BSHTMLLoader` methods to convert HTML from local folders, as well as a custom content extractor method `ContextExtractor` using BeautifulSoup to parse HTML content and extract specific elements.\n",
+    "\n",
+    "This notebook currently extracts Markdown from the following 6 links. There may be more links to add in the future.\n",
+    "\n",
+    "- https://hl7.org/fhir/us/davinci-pdex-plan-net/index.html\n",
+    "- https://hl7.org/fhir/us/davinci-pdex-plan-net/ChangeHistory.html\n",
+    "- https://hl7.org/fhir/us/davinci-pdex-plan-net/examples.html\n",
+    "- https://hl7.org/fhir/us/davinci-pdex-plan-net/implementation.html\n",
+    "- https://hl7.org/fhir/us/davinci-pdex-plan-net/profiles.html\n",
+    "- https://hl7.org/fhir/us/davinci-pdex-plan-net/artifacts.html\n",
+    "- https://hl7.org/fhir/us/davinci-pdex-plan-net/CapabilityStatement-plan-net.html"
    ]
   },
   {
