updating reqs extraction notebook, adding reqs revision and reqs to test plan notebooks, as well as more experiment outputs

--- a/markdown_cleaner.ipynb
+++ b/markdown_cleaner.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +78,11 @@
     "            else:\n",
     "                main_content = content_after_toc\n",
     "                \n",
-    "            # Remove footer content - comprehensive pattern to match the entire footer\n",
-    "            footer_pattern = r'\\s*IG © 2022\\\\\\+.*?(\\[Propose a change\\]|\\[QA Report\\]|Generated).*?$'\n",
-    "            main_content = re.sub(footer_pattern, '', main_content, flags=re.DOTALL)\n",
+    "            # Remove footer content with a more specific pattern\n",
+    "            # Explicitly search for the footer markers\n",
+    "            footer_start = re.search(r'(\\n\\s*IG ©|\\n IG ©|\\n\\s*Links:)', main_content)\n",
+    "            if footer_start:\n",
+    "                main_content = main_content[:footer_start.start()]\n",
     "            \n",
     "            # Add the title as a proper markdown heading\n",
     "            cleaned_content = f\"# {title}\\n\\n{main_content.strip()}\"\n",
@@ -101,9 +103,10 @@
     "            if nav_end:\n",
     "                main_content = content[nav_end.end():]\n",
     "                \n",
-    "                # Remove footer content - comprehensive pattern\n",
-    "                footer_pattern = r'\\s*IG © 2022\\\\\\+.*?(\\[Propose a change\\]|\\[QA Report\\]|Generated).*?$'\n",
-    "                main_content = re.sub(footer_pattern, '', main_content, flags=re.DOTALL)\n",
+    "                # Remove footer content\n",
+    "                footer_start = re.search(r'(\\n\\s*IG ©|\\n IG ©|\\n\\s*Links:)', main_content)\n",
+    "                if footer_start:\n",
+    "                    main_content = main_content[:footer_start.start()]\n",
     "                \n",
     "                # Try to find a title\n",
     "                title_match = re.search(r'## ([^\\n]+)', main_content)\n",
@@ -112,8 +115,9 @@
     "                return f\"# {title}\\n\\n{main_content.strip()}\"\n",
     "            else:\n",
     "                # If all else fails, just return the content with footer removed\n",
-    "                footer_pattern = r'\\s*IG © 2022\\\\\\+.*?(\\[Propose a change\\]|\\[QA Report\\]|Generated).*?$'\n",
-    "                content = re.sub(footer_pattern, '', content, flags=re.DOTALL)\n",
+    "                footer_start = re.search(r'(\\n\\s*IG ©|\\n IG ©|\\n\\s*Links:)', content)\n",
+    "                if footer_start:\n",
+    "                    content = content[:footer_start.start()]\n",
     "                return content.strip()\n",
     "    \n",
     "    except Exception as e:\n",
@@ -123,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
