adding revised test plan dev notebooks, revised reqs extraction notebooks, early test kit dev notebooks, and experimental outputs

--- a/reqs_extraction/reqs-to-testplan.ipynb
+++ b/reqs_extraction/reqs-to-testplan.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FHIR Test Kit Generator\n",
+    "# FHIR Test Plan Generator\n",
     "\n",
-    "This notebook generates a consolidated test kit markdown file from FHIR Implementation Guide requirements. The output serves as a complete specification that can be used by an LLM to generate executable test scripts.\n",
+    "This notebook generates a consolidated test plan markdown file from FHIR Implementation Guide requirements. The output serves as a complete specification that can be used by an LLM to generate executable test scripts.\n",
     "\n",
     "#### What it does\n",
     "\n",
@@ -39,14 +39,14 @@
     "   ---\n",
     "   ```\n",
     "\n",
-    "3. **Run**: Execute the `run_test_kit_generator()` function and follow the prompts:\n",
+    "3. **Run**: Execute the `run_test_plan_generator()` function and follow the prompts:\n",
     "   - Select which LLM to use\n",
     "   - Provide the path to your requirements file\n",
     "   - Enter the Implementation Guide name\n",
     "   - Specify the output directory, or use the default\n",
     "\n",
     "4. **Output**: A single markdown file will be generated with the format:\n",
-    "   `[ig_name]_[llm]_test_kit_[timestamp].md`"
+    "   `[ig_name]_[llm]_test_plan_[timestamp].md`"
    ]
   },
   {
@@ -141,12 +141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Main prompt for consolidated test kit\n",
-    "CONSOLIDATED_TEST_KIT_PROMPT = \"\"\"\n",
+    "# Main prompt for consolidated test plan\n",
+    "CONSOLIDATED_TEST_PLAN_PROMPT = \"\"\"\n",
     "Analyze the following FHIR Implementation Guide requirement and create a comprehensive test specification.\n",
     "\n",
     "For the requirement:\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
     "    formatted_req = format_requirement_for_prompt(requirement)\n",
     "    \n",
     "    # Create prompt with the requirement\n",
-    "    prompt = CONSOLIDATED_TEST_KIT_PROMPT.format(requirement=formatted_req)\n",
+    "    prompt = CONSOLIDATED_TEST_PLAN_PROMPT.format(requirement=formatted_req)\n",
     "    \n",
     "    # Make the API request\n",
     "    return make_llm_request(client, api_type, prompt, rate_limit_func)\n"
@@ -458,18 +458,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_consolidated_test_kit(\n",
+    "def generate_consolidated_test_plan(\n",
     "    api_type: str,\n",
     "    requirements_file: str,\n",
     "    ig_name: str = \"FHIR Implementation Guide\",\n",
     "    output_dir: str = OUTPUT_DIR\n",
     ") -> Dict[str, Any]:\n",
     "    \"\"\"\n",
-    "    Process requirements and generate a consolidated test kit\n",
+    "    Process requirements and generate a consolidated test plan\n",
     "    \n",
     "    Args:\n",
     "        api_type: API type (claude, gemini, gpt)\n",
@@ -480,7 +480,7 @@
     "    Returns:\n",
     "        Dictionary containing path to output file\n",
     "    \"\"\"\n",
-    "    logger.info(f\"Starting test kit generation with {api_type} for {ig_name}\")\n",
+    "    logger.info(f\"Starting test plan generation with {api_type} for {ig_name}\")\n",
     "    \n",
     "    # Initialize API clients and rate limiters\n",
     "    clients = setup_clients()\n",
@@ -501,23 +501,23 @@
     "        logger.info(f\"Parsed {len(requirements)} requirements from {requirements_file}\")\n",
     "        \n",
     "        # Output file\n",
-    "        test_kit_path = os.path.join(\n",
+    "        test_plan_path = os.path.join(\n",
     "            output_dir, \n",
-    "            f\"{ig_name.lower().replace(' ', '_')}_{api_type}_test_kit_{timestamp}.md\"\n",
+    "            f\"{ig_name.lower().replace(' ', '_')}_{api_type}_test_plan_{timestamp}.md\"\n",
     "        )\n",
     "        \n",
-    "        # Initialize test kit content\n",
-    "        test_kit = f\"# Consolidated Test Kit for {ig_name}\\n\\n\"\n",
-    "        test_kit += f\"## Generated on: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\\n\\n\"\n",
-    "        test_kit += \"## Table of Contents\\n\\n\"\n",
+    "        # Initialize test plan content\n",
+    "        test_plan = f\"# Consolidated Test Plan for {ig_name}\\n\\n\"\n",
+    "        test_plan += f\"## Generated on: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\\n\\n\"\n",
+    "        test_plan += \"## Table of Contents\\n\\n\"\n",
     "        \n",
     "        # Add table of contents\n",
     "        for req in requirements:\n",
     "            req_id = req.get('id', 'UNKNOWN-ID')\n",
     "            req_summary = req.get('summary', 'No summary')\n",
-    "            test_kit += f\"- [{req_id}: {req_summary}](#{req_id.lower()})\\n\"\n",
+    "            test_plan += f\"- [{req_id}: {req_summary}](#{req_id.lower()})\\n\"\n",
     "        \n",
-    "        test_kit += \"\\n## Test Specifications\\n\\n\"\n",
+    "        test_plan += \"\\n## Test Specifications\\n\\n\"\n",
     "        \n",
     "        # Process each requirement\n",
     "        for i, req in enumerate(requirements):\n",
@@ -527,27 +527,27 @@
     "            # Generate test specification\n",
     "            test_spec = generate_test_specification(client, api_type, req, check_limits)\n",
     "            \n",
-    "            # Add to test kit content with proper anchor for TOC linking\n",
-    "            test_kit += f\"<a id='{req_id.lower()}'></a>\\n\\n\"\n",
-    "            test_kit += f\"### {req_id}: {req.get('summary', 'No summary')}\\n\\n\"\n",
-    "            test_kit += f\"**Description**: {req.get('description', '')}\\n\\n\"\n",
-    "            test_kit += f\"**Actor**: {req.get('actor', '')}\\n\\n\"\n",
-    "            test_kit += f\"**Conformance**: {req.get('conformance', '')}\\n\\n\"\n",
-    "            test_kit += f\"{test_spec}\\n\\n\"\n",
-    "            test_kit += \"---\\n\\n\"\n",
+    "            # Add to test plan content with proper anchor for TOC linking\n",
+    "            test_plan += f\"<a id='{req_id.lower()}'></a>\\n\\n\"\n",
+    "            test_plan += f\"### {req_id}: {req.get('summary', 'No summary')}\\n\\n\"\n",
+    "            test_plan += f\"**Description**: {req.get('description', '')}\\n\\n\"\n",
+    "            test_plan += f\"**Actor**: {req.get('actor', '')}\\n\\n\"\n",
+    "            test_plan += f\"**Conformance**: {req.get('conformance', '')}\\n\\n\"\n",
+    "            test_plan += f\"{test_spec}\\n\\n\"\n",
+    "            test_plan += \"---\\n\\n\"\n",
     "            \n",
     "            # Add delay between requests\n",
     "            if i < len(requirements) - 1:  # No need to delay after the last request\n",
     "                time.sleep(config[\"delay_between_chunks\"])\n",
     "        \n",
-    "        # Save consolidated test kit\n",
-    "        with open(test_kit_path, 'w') as f:\n",
-    "            f.write(test_kit)\n",
-    "        logger.info(f\"Consolidated test kit saved to {test_kit_path}\")\n",
+    "        # Save consolidated test plan\n",
+    "        with open(test_plan_path, 'w') as f:\n",
+    "            f.write(test_plan)\n",
+    "        logger.info(f\"Consolidated test plan saved to {test_plan_path}\")\n",
     "        \n",
     "        return {\n",
     "            \"requirements_count\": len(requirements),\n",
-    "            \"test_kit_path\": test_kit_path\n",
+    "            \"test_plan_path\": test_plan_path\n",
     "        }\n",
     "        \n",
     "    except Exception as e:\n",
@@ -557,17 +557,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Interactive notebook cell for running the generator\n",
-    "def run_test_kit_generator():\n",
+    "def run_test_plan_generator():\n",
     "    # Load environment variables\n",
     "    load_dotenv()\n",
     "    \n",
     "    # Get input from user or set default values\n",
-    "    print(\"\\nFHIR IG Test Kit Generator\")\n",
+    "    print(\"\\nFHIR IG Test Plan Generator\")\n",
     "    print(\"=\" * 50)\n",
     "    \n",
     "    # Let user select the API\n",
@@ -604,8 +604,8 @@
     "    print(f\"This may take several minutes depending on the number of requirements.\")\n",
     "    \n",
     "    try:\n",
-    "        # Process requirements and generate test kit\n",
-    "        result = generate_consolidated_test_kit(\n",
+    "        # Process requirements and generate test plan\n",
+    "        result = generate_consolidated_test_plan(\n",
     "            api_type=api_type,\n",
     "            requirements_file=requirements_file,\n",
     "            ig_name=ig_name,\n",
@@ -614,9 +614,9 @@
     "        \n",
     "        # Output results\n",
     "        print(\"\\n\" + \"=\"*80)\n",
-    "        print(f\"Test kit generation complete!\")\n",
+    "        print(f\"Test plan generation complete!\")\n",
     "        print(f\"Processed {result['requirements_count']} requirements\")\n",
-    "        print(f\"Consolidated test kit: {result['test_kit_path']}\")\n",
+    "        print(f\"Consolidated test plan: {result['test_plan_path']}\")\n",
     "        print(\"=\"*80)\n",
     "        \n",
     "        return result\n",
@@ -741,7 +741,7 @@
    "source": [
     "# Run the generator when executed in a notebook cell\n",
     "if __name__ == \"__main__\":\n",
-    "    run_test_kit_generator()"
+    "    run_test_plan_generator()"
    ]
   }
  ],
