--- a/reqs_extraction/reqs_reviewer.ipynb
+++ b/reqs_extraction/reqs_reviewer.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
     "# API Configuration\n",
     "API_CONFIGS = {\n",
     "    \"claude\": {\n",
-    "        \"model_name\": \"claude-3-7-sonnet-20250219\",\n",
+    "        \"model_name\": \"claude-3-5-sonnet-20241022\",\n",
     "        \"max_tokens\": 8192,\n",
     "        \"temperature\": 0.7,\n",
     "        \"delay_between_requests\": 1\n",
@@ -110,8 +110,8 @@
     "        \"timeout\": 60\n",
     "    },\n",
     "    \"gpt\": {\n",
-    "        \"model\": \"gpt-4\",\n",
-    "        \"max_tokens\": 4096,\n",
+    "        \"model\": \"gpt-4o\",\n",
+    "        \"max_tokens\": 8192,\n",
     "        \"temperature\": 0.7,\n",
     "        \"delay_between_requests\": 2\n",
     "    }\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,11 +205,12 @@
     "1. Produce a list of 15-50 clear, testable requirements that a conformance testing tool could verify.\n",
     "\n",
     "2. Include ONLY requirements that:\n",
-    "   - Have explicit conformance language (SHALL, SHOULD, MAY)\n",
+    "   - Have explicit conformance language (SHALL, SHOULD, MAY, MUST, REQUIRED, etc.)\n",
     "   - Describe specific, verifiable behavior or capability\n",
     "   - Could be objectively tested through software testing or attestation\n",
     "\n",
     "3. EXCLUDE the following types of content:\n",
+    "   - General introductory or conclusive/summarization comments\n",
     "   - Implementation guidance or explanatory text\n",
     "   - Examples or sample queries\n",
     "   - Duplicate requirements (consolidate similar requirements)\n",
@@ -218,27 +219,22 @@
     "   - Requirements fragments that should be part of a single testable requirement\n",
     "\n",
     "4. For each requirement, include:\n",
-    "   - A clear, concise statement of what MUST, SHOULD, or MAY be implemented\n",
+    "   - A clear, concise statement of what MUST, SHOULD, MAY, SHALL, etc. be implemented\n",
     "   - The actor responsible (Server, Client, Application, etc.)\n",
-    "   - The conformance level (SHALL, SHOULD, MAY)\n",
+    "   - The conformance level (SHALL, SHOULD, MAY, MUST, REQUIRED, etc.)\n",
     "\n",
-    "5. Consolidate related requirements where appropriate. For example:\n",
-    "   - Combine all error response requirements into a single requirement\n",
-    "   - Group related search parameter support into logical categories\n",
-    "   - Merge requirements about the same capability from different sections\n",
-    "\n",
-    "6. Format each requirement consistently:\n",
+    "5. Format each requirement consistently:\n",
     "   - Use active voice\n",
     "   - Begin with the actor (e.g., \"Server SHALL...\")\n",
     "   - Make each requirement atomic and independently testable\n",
     "   - Ensure requirements are implementation-neutral\n",
     "\n",
-    "After filtering and consolidating, verify that each requirement in your final list represents a discrete, testable capability or constraint that would be appropriate for conformance testing.\n",
+    "After filtering, verify that each requirement in your final list represents a discrete, testable capability or constraint that would be appropriate for conformance testing.\n",
     "\n",
-    "Keep the formatting of each requirement as follows:\n",
+    "Keep the formatting of each requirement as follows- renumber requirement IDs as you keep requirements in a list, starting with 01:\n",
     "    \n",
     "    ---\n",
-    "    # REQ-XXX-XXX-XX\n",
+    "    # REQ-XX\n",
     "    **Summary**: [summary text]\n",
     "    **Description**: \"[description text]\"\n",
     "    **Verification**: [method]\n",
@@ -248,6 +244,8 @@
     "    **Source**: [reference]\n",
     "    ---\n",
     "\n",
+    "Do not include any other text in the response output, besides the requirements list. \n",
+    "\n",
     "Here is the list of requirements to refine:\n",
     "\n",
     "{requirements_list}\n",
@@ -256,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -479,12 +477,22 @@
       "================================================================================\n",
       "\n",
       "Available requirements files:\n",
-      "1. plan_net_gemini_requirements_list_20250312_141125.md\n",
-      "2. plan_net_claude_requirements_list_20250312_142943.md\n",
-      "3. da_vinci_pdex_plan_net_gemini_requirements_list_20250312_135622.md\n",
-      "4. plan_net_claude_requirements_list_20250319_115141.md\n",
-      "5. plan_net_gpt_requirements_list_20250319_113850.md\n",
-      "6. plan_net_claude_requirements_list_20250319_111650.md\n",
+      "1. plan_net_gemini_requirements_list_20250402_132718.md\n",
+      "2. plan_net_gemini_requirements_list_20250312_141125.md\n",
+      "3. plan_net_gemini_requirements_list_20250402_124101.md\n",
+      "4. plan_net_claude_requirements_list_20250402_113844.md\n",
+      "5. plan_net_gpt_requirements_list_20250402_135527.md\n",
+      "6. plan_net_gemini_requirements_list_20250402_115052.md\n",
+      "7. plan_net_claude_requirements_list_20250402_144346.md\n",
+      "8. plan_net_gpt_requirements_list_20250402_130154.md\n",
+      "9. plan_net_claude_requirements_list_20250312_142943.md\n",
+      "10. da_vinci_pdex_plan_net_gemini_requirements_list_20250312_135622.md\n",
+      "11. plan_net_claude_requirements_list_20250319_115141.md\n",
+      "12. plan_net_gpt_requirements_list_20250402_123150.md\n",
+      "13. plan_net_gemini_requirements_list_20250402_145733.md\n",
+      "14. plan_net_gpt_requirements_list_20250319_113850.md\n",
+      "15. plan_net_gemini_requirements_list_20250402_133857.md\n",
+      "16. plan_net_claude_requirements_list_20250319_111650.md\n",
       "\n",
       "Select the API to use:\n",
       "1. Claude\n",
@@ -496,8 +504,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-19 11:54:16,415 - __main__ - INFO - Starting requirements refinement with claude\n",
-      "2025-03-19 11:54:16,444 - __main__ - INFO - Sending requirements to claude for refinement...\n"
+      "2025-04-02 14:58:00,755 - __main__ - INFO - Starting requirements refinement with gemini\n",
+      "2025-04-02 14:58:00,784 - __main__ - INFO - Sending requirements to gemini for refinement...\n"
      ]
     },
     {
@@ -505,15 +513,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Processing requirements with Claude...\n"
+      "Processing requirements with Gemini...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-19 11:54:45,210 - httpx - INFO - HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
-      "2025-03-19 11:54:45,211 - __main__ - INFO - Requirements refinement complete. Output saved to: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/revised_reqs/refined_requirements_claude_20250319_115445.md\n"
+      "2025-04-02 14:58:27,474 - __main__ - INFO - Requirements refinement complete. Output saved to: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/revised_reqs/refined_requirements_gemini_20250402_145827.md\n"
      ]
     },
     {
@@ -523,9 +530,9 @@
       "\n",
       "================================================================================\n",
       "Requirements Refinement Complete!\n",
-      "Input file: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/processed_output/plan_net_claude_requirements_list_20250319_115141.md\n",
-      "Refined requirements saved to: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/revised_reqs/refined_requirements_claude_20250319_115445.md\n",
-      "API used: claude\n",
+      "Input file: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/processed_output/plan_net_gemini_20250402_145733.md\n",
+      "Refined requirements saved to: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/revised_reqs/refined_requirements_gemini_20250402_145827.md\n",
+      "API used: gemini\n",
       "================================================================================\n"
      ]
     }
